# ml-python-template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: README.md  mkdocs.yaml  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: checks.yaml
{{cookiecutter.project_name}}/git-hooks/: .pre-commit-config.yaml  README.md  hooks-commitizen.py  install.sh  prepare-commit-msg
